--- a/soh/default.css
+++ b/soh/default.css
@@ -2982,7 +2982,7 @@ li[data-val="1f92e"]{
     text-decoration: underline;
 }
 .rad-content {
-    margin-top: 29px;
+    margin: 19px;
 }
 .rad-ol {
     margin-bottom: 25px;
