--- a/soh/default.css
+++ b/soh/default.css
@@ -3059,4 +3059,36 @@ li[data-val="1f92e"]{
 }
 }
 
+/*received*/
+
+.rec-core{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+}
+.rec-img {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    padding: 0 20px;
+    margin-bottom: 10px
+}
+.rec-cont{
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 40px 0;
+    max-width: 800px
+}
+.rec-core h1{
+    color: #1d5e67; letter-spacing: 1.5px;
+}
+.rec-main p, .rec-core h1{
+    font-family: calibri;
+}
+.rec-main p{
+    letter-spacing: 1.5px; color: #656565; font-size: 18px;
+}
+.rec-core h1{
+    text-align: center:
+}
+
 
