--- a/soh/default.css
+++ b/soh/default.css
@@ -2013,12 +2013,12 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
 	appearance: none;
 	display: inline-block;
 	position: relative;
-	background-color: #ececec;
+	background-color: #f0f0f0;
 	color: #666;
 	top: 5px;
 	height: 20px;
 	width: 20px;
-	border: 0;
+	border: 1px solid #d4d4d4;
 	border-radius: 50px;
 	cursor: pointer;
 	margin-right: 7px;
